# princeton-bootcamp-kokkos-2022

./: .gitignore  README.md  slides.fig
code_samples/: cuda_vadd.cu
tests/atomic_reduction/: CMakeLists.txt  Makefile  ared.cpp  ared.cu  compare.sh  kared.cpp
tests/vector_addition/: CMakeLists.txt  Makefile  compare.sh  kvadd.cpp  vadd.cpp  vadd.cu
tests/vector_addition_2d/: CMakeLists.txt  Makefile  compare.sh  kvadd2d.cpp  vadd2d.cpp
